tests/machine/x/ocaml/string_index.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_index.ml", line 39, characters 34-35:
39 |   print_endline (__show (List.nth s 1));
                                       ^
Error: This expression has type string but an expression was expected of type
         'a list


Context (around line 39):
  37 | 
  38 | let () =
  39 |   print_endline (__show (List.nth s 1));
  40 | 
